--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
         <section class="card">
           <h2>About Me</h2>
           <p>
-            I am a junior undergraduate student in Computer Science at the
+            I am a senior undergraduate student in Computer Science at the
             University of Utah, with a minor in Mathematics. My primary
             interests are in reinforcement learning, robotic manipulation, and
             AI systems that can help people in the real world.
