Update a new portfolio-preview picture

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,6 @@
     <canvas id="bgCanvas"></canvas>
 
     <div class="page">
-      <!-- 头部 + 导航，与 index/about 保持一致 -->
       <header class="site-header">
         <div class="header-content">
           <img
@@ -50,7 +49,7 @@
       </header>
 
       <main class="container main-content">
-        <!-- 简短介绍 -->
+        <!-- introduction -->
         <section class="card">
           <h2>Projects</h2>
           <p>
@@ -59,7 +58,7 @@
           </p>
         </section>
 
-        <!-- 1. RL 机械臂项目 -->
+        <!-- 1. RL project -->
         <section class="card">
           <h3>Reinforcement Learning for Franka Panda Pick-and-Place</h3>
           <p class="timeline-date">
@@ -78,7 +77,7 @@
             This project is part of my research in the LL4MA Lab at the
             Kahlert School of Computing.
           </p>
-          <!-- 可放一张 / 动图演示 -->
+          <!-- gif display -->
           <p style="margin-top: 0.8rem;">
             <img
               src="assets/rl-robot-arm.gif"
