--- a/projects.html
+++ b/projects.html
@@ -144,7 +144,7 @@
           </p>
           <p style="margin-top: 0.8rem;">
             <img
-              src="assets/portfolio-preview.jpg"
+              src="assets/portfolio-preview.png"
               alt="Portfolio website preview"
               class="about-photo"
               style="max-width: 100%; border-radius: 10px;"
