--- a/index.html
+++ b/index.html
@@ -64,6 +64,36 @@
             <a href="projects.html">projects</a> page.
           </p>
         </section>
+
+        <section class="card">
+        <h2>Research Interests & Vision</h2>
+        <p>
+          Recent advances in Vision-Language-Action models, such as OpenVLA, have
+          demonstrated the promise of integrating internet-scale pre-training with
+          robotic control, enabling impressive task-level generalization across
+          diverse instructions and environments. However, a key limitation remains
+          in their ability to perform high-frequency, dexterous manipulation, where
+          precise, continuous control is essential.
+        </p>
+        <p>
+          In contrast, diffusion-based policies have shown strong performance in
+          generating smooth, physically grounded action trajectories, but typically
+          lack semantic grounding and cross-task generalization. 
+          <em>
+            I am interested in bridging this gap by exploring hybrid architectures that
+            combine the strengths of both paradigms.
+          </em>
+        </p>
+        <p>
+          My future research goal is to investigate how rich semantic representations learned
+          by large VLA models can condition diffusion-based policy heads for low-level
+          control. By moving beyond discrete, token-based action prediction and toward
+          continuous, distributional motion generation, I aim to develop generalist
+          robotic policies that retain strong language grounding while achieving
+          high-fidelity, dynamically consistent manipulation.
+        </p>
+      </section>
+
       </main>
 
       <footer class="site-footer">
